Closed Bug 1115886 Opened 10 years ago Closed 10 years ago

Store TypeObject::interpretedFunction in its addendum

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: bhackett1024, Assigned: bhackett1024)

References

Details

Attachments

(1 file)

I think this was part of another bug a while ago that never landed, but now that TypeObject::addendum is back it makes a nice place to store the interpreted function for a TypeObject, which frees up a word (two words on 32 bit platforms).
Attached patch patchSplinter Review
Assignee: nobody → bhackett1024
Attachment #8544282 - Flags: review?(jdemooij)
Comment on attachment 8544282 [details] [diff] [review] patch Review of attachment 8544282 [details] [diff] [review]: ----------------------------------------------------------------- Looks good.
Attachment #8544282 - Flags: review?(jdemooij) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Appears to have caused a 11.1% regression on AWFY Octane-Splay on machine 28. http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=7de37d6b2f4c&tochange=a27623547914
(In reply to mayankleoboy1 from comment #5) > Appears to have caused a 11.1% regression on AWFY Octane-Splay on machine 28. > > http://hg.mozilla.org/integration/mozilla-inbound/ > pushloghtml?fromchange=7de37d6b2f4c&tochange=a27623547914 Hmm, I'll look at this later but there isn't any reason this patch should have regressed splay (and the regression didn't happen on OS X x64 or on windows browser), though if our GC heuristics are especially brittle on this machine the reduction in size of TypeObject could have affected something.
(In reply to Brian Hackett (:bhackett) from comment #6) > (In reply to mayankleoboy1 from comment #5) > > Appears to have caused a 11.1% regression on AWFY Octane-Splay on machine 28. > > > > http://hg.mozilla.org/integration/mozilla-inbound/ > > pushloghtml?fromchange=7de37d6b2f4c&tochange=a27623547914 > > Hmm, I'll look at this later but there isn't any reason this patch should > have regressed splay (and the regression didn't happen on OS X x64 or on > windows browser), though if our GC heuristics are especially brittle on this > machine the reduction in size of TypeObject could have affected something. Running locally on 10.9 x86 I get similar scores before/after this patch when running splay by itself. Similar to machine 28, if I run the entire suite the splay score drops a bit but the splay-latency score goes up a bit. So I think shrinking sizeof(TypeObject) probably just changed where we do GCs on this benchmark when running in the shell.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: