Bug 1115886 - Store TypeObject::interpretedFunction in its addendum, r=jandem.